# perhaps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml  test-3.11.yml  test-3.8.yml  test.yml
perhaps/: __init__.py  maybe.py
tests/: linked_list.py  test_lifts.py  test_linked_list.py  test_maybe.py  test_peekable.py
