[tool.poetry]
name = "perhaps"
version = "0.1.0"
description = ""
authors = ["HKGx <mail@hkgdoes.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pyright = "^1.1.279"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.8"
