[tool.poetry]
authors = ["HKGx <mail@hkgdoes.dev>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Perhaps there is no data or perhaps there is"
homepage = "https://github.com/HKGx/perhaps"
keywords = ["maybe", "monad", "functional programming", "just", "some"]
license = "MIT"
name = "perhaps"
readme = "README.md"
repository = "https://github.com/HKGx/perhaps"
version = "0.4.1"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pyright = "^1.1.279"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.8"
